--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,14 @@ services:
     image: nginx:stable-alpine
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+  depends_on:
+    - node-app
+  
   node-app:
     build: .
     depends_on:
       - mongo
-  
+
   mongo:
     image: mongo
     volumes: 
