--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - mongo
 
   mongo:
-    image: mongo
+    image: mongo:4.2.23-rc0-bionic
     volumes: 
       - db-data:/data/db
 
