--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,8 @@ services:
     deploy:
       replicas: 4
       restart_policy:
-        conditions: any
+        condition: any
+      update_config:
         parallelism: 2
         delay: 15s
     build: 
